corrected hover png on staffing bar overlapping bottom

--- a/css/altres.css
+++ b/css/altres.css
@@ -55,7 +55,7 @@ body {
 }
 
 body.not-front #splash {
-	height: 380px;
+	height: 379px;
 }
 
 img {
@@ -426,6 +426,7 @@ body.section-industrial #staffing {
 
 body.section-industrial #primary-links a:hover, body.section-industrial #primary-links a:focus, body.section-industrial #primary-links a:active, body.section-industrial #primary-links a.active {
 	background-image: url(../images/staffing/industrial-hover-bg.png);
+	background-position: 0px -11px;
 }
 
 body.section-industrial #splash {
@@ -467,6 +468,7 @@ body.section-office #staffing {
 
 body.section-office #primary-links a:hover, body.section-office #primary-links a:focus, body.section-office #primary-links a:active, body.section-office #primary-links a.active {
 	background-image: url(../images/staffing/office-hover-bg.png);
+	background-position: 0px -6px;
 }
 
 body.section-office #splash {
@@ -508,6 +510,7 @@ body.section-technical #staffing {
 
 body.section-technical #primary-links a:hover, body.section-technical #primary-links a:focus, body.section-technical #primary-links a:active, body.section-technical #primary-links a.active {
 	background-image: url(../images/staffing/technical-hover-bg.png);
+	background-position: 0px -6px;
 }
 
 body.section-technical #splash {
@@ -549,6 +552,7 @@ body.section-medical #staffing {
 
 body.section-medical #primary-links a:hover, body.section-medical #primary-links a:focus, body.section-medical #primary-links a:active, body.section-medical #primary-links a.active {
 	background-image: url(../images/staffing/medical-hover-bg.png);
+	background-position: 0px -6px;
 }
 
 body.section-medical #splash {
